# litiv

./: .cproject  .dockerignore  .gitattributes  .gitignore  .project  .travis.yml  BackgroundSubtractorCBLBSP.cpp  BackgroundSubtractorCBLBSP.h  BackgroundSubtractorLBSP.cpp  BackgroundSubtractorLBSP.h  BackgroundSubtractorLOBSTER.cpp  BackgroundSubtractorLOBSTER.h  BackgroundSubtractorPAWCS.cpp  BackgroundSubtractorPAWCS.h  BackgroundSubtractorPBAS.cpp  BackgroundSubtractorPBAS.h  BackgroundSubtractorPBASLBSP.cpp  BackgroundSubtractorPBASLBSP.h  BackgroundSubtractorPBAS_1ch.cpp  BackgroundSubtractorPBAS_1ch.h  BackgroundSubtractorPBAS_3ch.cpp  BackgroundSubtractorPBAS_3ch.h  BackgroundSubtractorSuBSENSE.cpp  BackgroundSubtractorSuBSENSE.h  BackgroundSubtractorViBe.cpp  BackgroundSubtractorViBe.h  BackgroundSubtractorViBeLBSP.cpp  BackgroundSubtractorViBeLBSP.h  BackgroundSubtractorViBe_1ch.cpp  BackgroundSubtractorViBe_1ch.h  BackgroundSubtractorViBe_3ch.cpp  BackgroundSubtractorViBe_3ch.h  CMakeLists.txt  Cxx11Utils.h  DatasetUtils.cpp  DatasetUtils.h  DetectChange.cpp  DetectChange.h  DistanceUtils.h  Dockerfile  (+46 more)
apps/capture/: CMakeLists.txt
apps/capture/src/: main.cpp
apps/edges/: CMakeLists.txt
apps/edges/src/: main.cpp
apps/vidreg/: CMakeLists.txt
apps/vidreg/src/: main.cpp
apps/vptz/: CMakeLists.txt
apps/vptz/camshift/: CMakeLists.txt
apps/vptz/camshift/src/: main.cpp
apps/vptz/gtmaker/: CMakeLists.txt
apps/vptz/gtmaker/src/: main.cpp
apps/vptz/gtviewer/: CMakeLists.txt
apps/vptz/gtviewer/src/: main.cpp
apps/vptz/opencv3contrib tracker/: main.cpp
cmake/checks/simd/: CMakeLists.txt  cvhardwaresupport_check.cpp.in
doc/: CMakeLists.txt  Doxyfile.in  IEEEabrv.bib  litiv.bib
execs/changedet/: CMakeLists.txt
execs/changedet/src/: main.cpp
execs/vptz_camshift/: CMakeLists.txt
execs/vptz_camshift/src/: main.cpp
execs/vptz_gtviewer/: CMakeLists.txt
execs/vptz_gtviewer/src/: main.cpp
modules/datasets/: CMakeLists.txt  README.md
modules/datasets/include/litiv/: datasets.hpp
modules/datasets/include/litiv/datasets/: DatasetEvalUtils.hpp  DatasetEvaluator.hpp  DatasetParser.hpp  DatasetUtils.hpp  eval.hpp  metrics.hpp  utils.hpp
modules/datasets/src/: DatasetEvalUtils.cpp  DatasetEvaluator.cpp  DatasetParser.cpp  DatasetUtils.cpp  datasets.cpp  eval.cpp  metrics.cpp  utils.cpp
modules/datasets/src/impl/: BSDS500.cpp
modules/datasets/test/: array.cpp  notarray.cpp
modules/features2d/: CMakeLists.txt  README.md
modules/features2d/cuda/: SC.cu  SC.cuh
modules/features2d/include/litiv/: features2d.hpp
modules/features2d/include/litiv/features2d/: DASC.hpp  LBSP.hpp  LBSP_16bits_dbcross_1ch.ipp  LBSP_16bits_dbcross_1res.ipp  LBSP_16bits_dbcross_lookup.ipp  LBSP_16bits_dbcross_threshold.ipp  LSS.hpp  MI.hpp  SC.hpp
modules/features2d/src/: DASC.cpp  LBSP.cpp  LSS.cpp  MI.cpp  SC.cpp
modules/features2d/test/: dasc.cpp  global.cpp  lbsp.cpp  lss.cpp  mi.cpp  sc.cpp
modules/imgproc/: CMakeLists.txt  README.md
modules/imgproc/cuda/: SLIC.cu  SLIC.cuh  SLIC_device.cu  SLIC_device.cuh  SLIC_device.hpp  SLIC_host.cu  affinity.cu  affinity.cuh
modules/imgproc/include/litiv/: imgproc.hpp
modules/imgproc/include/litiv/imgproc/: CosegmentationUtils.hpp  CosegmentationUtils.inl.hpp  EdgeDetectionUtils.hpp  EdgeDetectorCanny.hpp  EdgeDetectorLBSP.hpp  ForegroundStereoMatcher.hpp  ForegroundStereoMatcher.inl.hpp  SLIC.hpp  SegmMatcher.hpp  StereoGraphMatcher.hpp  StereoMatcher.hpp  imwarp.hpp
modules/imgproc/src/: EdgeDetectionUtils.cpp  EdgeDetectorCanny.cpp  EdgeDetectorLBSP.cpp  ForegroundStereoMatcher.cpp  SLIC.cpp  SegmMatcher.cpp  imgproc.cpp  imwarp.cpp
modules/imgproc/test/: global.cpp
modules/imgproc/test/cuda/: slic.cpp
modules/test/: CMakeLists.txt  README.md
modules/test/include/litiv/: test.hpp
modules/test/src/: test.cpp
modules/utils/: CMakeLists.txt  README.md
modules/utils/cuda/: test.cu  test.cuh
modules/utils/include/litiv/: utils.hpp
modules/utils/include/litiv/utils/: ConsoleUtils.hpp  CxxUtils.hpp  DatasetEvalUtils.hpp  DatasetUtils.hpp  DefineUtils.hpp.in  DistanceUtils.hpp  GLDrawUtils.hpp  GLImageProcUtils.hpp  GLShaderUtils.hpp  GLUtils.hpp  OpenCVUtils.hpp  ParallelUtils.hpp  ParallelUtils.hpp.in  PlatformUtils.hpp  RandUtils.hpp  algo.hpp  console.hpp  cuda.hpp  cxx.hpp  defines.hpp.in  distances.hpp  kinect.hpp  math.hpp  opencv.hpp  opengl-draw.hpp  opengl-imgproc.hpp  opengl-shaders.hpp  opengl.hpp  opengm.hpp  (+3 more)
modules/utils/src/: DatasetEvalUtils.cpp  DatasetUtils.cpp  GLDrawUtils.cpp  GLImageProcUtils.cpp  GLShaderUtils.cpp  GLUtils.cpp  OpenCVUtils.cpp  PlatformUtils.cpp  cuda.cpp  cxx.cpp  opencv.cpp  opengl-draw.cpp  opengl-imgproc.cpp  opengl-shaders.cpp  opengl.cpp  platform.cpp
modules/utils/test/: common.hpp  cxx.cpp  distances.cpp  math.cpp  opencv.cpp  platform.cpp  simd.cpp
modules/video/: CMakeLists.txt  README.md
modules/video/include/litiv/: video.hpp
modules/video/src/: BackgroundSubtractionUtils.cpp  BackgroundSubtractorLBSP.cpp  BackgroundSubtractorLOBSTER.cpp  BackgroundSubtractorPAWCS.cpp  BackgroundSubtractorPBAS.cpp  BackgroundSubtractorPBAS_1ch.cpp  BackgroundSubtractorPBAS_3ch.cpp  BackgroundSubtractorSuBSENSE.cpp  BackgroundSubtractorUtils.cpp  BackgroundSubtractorViBe.cpp  BackgroundSubtractorViBe_1ch.cpp  BackgroundSubtractorViBe_3ch.cpp
modules/vptz/: CMakeLists.txt  LICENSE.txt  README.md
modules/vptz/include/litiv/: vptz.hpp
modules/vptz/src/: virtualptz.cpp  virtualptzExtend.cpp
modules/world/: CMakeLists.txt  README.md
modules/world/include/litiv/: config.hpp  litiv.hpp  world.hpp
modules/world/src/: world.cpp
modules_external/BSDS500_utils/: CMakeLists.txt
modules_external/BSDS500_utils/src/: Random.cc  csa.cc  kofn.cc
samples/datasets/: CMakeLists.txt  README.md
samples/datasets/src/: main.cpp  middlebury2005.hpp
samples/edges_simple/: CMakeLists.txt  README.md
samples/edges_simple/src/: main.cpp
temp_slic/: CMakeLists.txt  README.md
temp_slic/include/: SlicCudaHost.h
temp_slic/src/: SlicCudaDevice.cu  main.cpp
(+113 files in other folders)
